# open-fda-drug-safety-pipeline

./: .env.example  .gitignore  README.md  pipeline.py  pyproject.toml
src/: config.py  utils.py
src/dashboard/: app.py  db.py
src/dashboard/pages/: 1_Adverse_Events.py  2_Recalls.py  3_Drug_Explorer.py
src/ingestion/: adverse_events.py  client.py  ndc.py  recalls.py
src/storage/: database.py
src/transform/: adverse_events.py  ndc.py  recalls.py
