[project]
name = "openfda-analytics"
version = "0.1.0"
description = "FDA drug safety data engineering pipeline and analytics dashboard"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "duckdb>=1.1.0",
    "streamlit>=1.37.0",
    "plotly>=5.22.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.9.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
